--- a/Car price/machine_learning.ipynb
+++ b/Car price/machine_learning.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyN4didD5sdttY3EPoMKMHIb",
+      "authorship_tag": "ABX9TyO67OUfg6nSMzV9Ba9aqOsM",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -27,15 +27,24 @@
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": 1,
+      "cell_type": "markdown",
+      "source": [
+        "# **Загрузка данных**"
+      ],
       "metadata": {
         "id": "9275W_mYUI4Y"
-      },
-      "outputs": [],
+      }
+    },
+    {
+      "cell_type": "markdown",
       "source": [
-        "import pandas as pd"
-      ]
+        "https://www.kaggle.com/adityadesai13/used-car-dataset-ford-and-mercedes?select=bmw.csv\n",
+        "\n",
+        "https://drive.google.com/file/d/10pq7rvk_FtY-ulQ8ldVM4QAtaR6LWt-j/view?usp=sharing\n"
+      ],
+      "metadata": {
+        "id": "IypKs4QUVWIk"
+      }
     },
     {
       "cell_type": "code",
