--- a/Car price/model_analysis_and_interpretation.ipynb
+++ b/Car price/model_analysis_and_interpretation.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNHoNor+QL3IL++IZ+DxAM8",
+      "authorship_tag": "ABX9TyPDWv2n/CxEXkbWnEaqDMht",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -577,7 +577,9 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "! pip"
+      ],
       "metadata": {
         "id": "_81UDUVNq4t6"
       },
