--- a/Car price/useful_stuff.ipynb
+++ b/Car price/useful_stuff.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyM/HorzI7oY45PNx0BAPUNk",
+      "authorship_tag": "ABX9TyOiH3L+cZZYWjy8B975h7Ok",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2201,10 +2201,331 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "# **Подбор гиперпараметров**"
+      ],
+      "metadata": {
+        "id": "0ULnDTfYhN4z"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "model.get_all_params()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "xHPLMzZ4ppnR",
+        "outputId": "8095e3bc-1804-445a-c4e6-5a2928c3357d"
+      },
+      "execution_count": 69,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "{'nan_mode': 'Min',\n",
+              " 'eval_metric': 'AUC',\n",
+              " 'combinations_ctr': ['Borders:CtrBorderCount=15:CtrBorderType=Uniform:TargetBorderCount=1:TargetBorderType=MinEntropy:Prior=0/1:Prior=0.5/1:Prior=1/1',\n",
+              "  'Counter:CtrBorderCount=15:CtrBorderType=Uniform:Prior=0/1'],\n",
+              " 'iterations': 741,\n",
+              " 'sampling_frequency': 'PerTree',\n",
+              " 'fold_permutation_block': 0,\n",
+              " 'leaf_estimation_method': 'Newton',\n",
+              " 'random_score_type': 'NormalWithModelSizeDecrease',\n",
+              " 'counter_calc_method': 'SkipTest',\n",
+              " 'grow_policy': 'SymmetricTree',\n",
+              " 'penalties_coefficient': 1,\n",
+              " 'boosting_type': 'Plain',\n",
+              " 'model_shrink_mode': 'Constant',\n",
+              " 'feature_border_type': 'GreedyLogSum',\n",
+              " 'ctr_leaf_count_limit': 18446744073709551615,\n",
+              " 'bayesian_matrix_reg': 0.10000000149011612,\n",
+              " 'one_hot_max_size': 2,\n",
+              " 'eval_fraction': 0,\n",
+              " 'force_unit_auto_pair_weights': False,\n",
+              " 'l2_leaf_reg': 3,\n",
+              " 'random_strength': 1,\n",
+              " 'rsm': 1,\n",
+              " 'boost_from_average': False,\n",
+              " 'max_ctr_complexity': 4,\n",
+              " 'model_size_reg': 0.5,\n",
+              " 'simple_ctr': ['Borders:CtrBorderCount=15:CtrBorderType=Uniform:TargetBorderCount=1:TargetBorderType=MinEntropy:Prior=0/1:Prior=0.5/1:Prior=1/1',\n",
+              "  'Counter:CtrBorderCount=15:CtrBorderType=Uniform:Prior=0/1'],\n",
+              " 'pool_metainfo_options': {'tags': {}},\n",
+              " 'subsample': 0.800000011920929,\n",
+              " 'use_best_model': False,\n",
+              " 'class_names': [0, 1],\n",
+              " 'random_seed': 42,\n",
+              " 'depth': 6,\n",
+              " 'ctr_target_border_count': 1,\n",
+              " 'posterior_sampling': False,\n",
+              " 'has_time': False,\n",
+              " 'store_all_simple_ctr': False,\n",
+              " 'border_count': 254,\n",
+              " 'classes_count': 0,\n",
+              " 'auto_class_weights': 'None',\n",
+              " 'sparse_features_conflict_fraction': 0,\n",
+              " 'leaf_estimation_backtracking': 'AnyImprovement',\n",
+              " 'best_model_min_trees': 1,\n",
+              " 'model_shrink_rate': 0,\n",
+              " 'min_data_in_leaf': 1,\n",
+              " 'loss_function': 'Logloss',\n",
+              " 'learning_rate': 0.009999999776482582,\n",
+              " 'score_function': 'Cosine',\n",
+              " 'task_type': 'CPU',\n",
+              " 'leaf_estimation_iterations': 10,\n",
+              " 'bootstrap_type': 'MVS',\n",
+              " 'max_leaves': 64,\n",
+              " 'permutation_count': 4}"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 69
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "\n",
+        "params = {'verbose':100,\n",
+        "          'eval_metric':'AUC',\n",
+        "          'loss_function': 'Logloss',\n",
+        "          'random_seed':42}"
+      ],
+      "metadata": {
+        "id": "loQoStEipv3i"
+      },
+      "execution_count": 70,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "model = CatBoostClassifier(**params)"
+      ],
+      "metadata": {
+        "id": "OmYeInRcp-s9"
+      },
+      "execution_count": 71,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "grid = {'learning_rate':[0.01, 0.1],\n",
+        "        'depth':[5,6]}"
+      ],
+      "metadata": {
+        "id": "iPVgCaHNqC_m"
+      },
+      "execution_count": 72,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "result = model.grid_search(grid,train_full_data,verbose=False)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "5ufhQ0OVqdVX",
+        "outputId": "14a18a96-c02e-4da1-f4bd-79cb4cd0582d"
+      },
+      "execution_count": 73,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "0:\ttest: 0.7811641\tbest: 0.7811641 (0)\ttotal: 21ms\tremaining: 21s\n",
+            "100:\ttest: 0.8435462\tbest: 0.8435769 (99)\ttotal: 1.44s\tremaining: 12.8s\n",
+            "200:\ttest: 0.8508923\tbest: 0.8508923 (200)\ttotal: 2.41s\tremaining: 9.6s\n",
+            "300:\ttest: 0.8547897\tbest: 0.8547897 (300)\ttotal: 3.62s\tremaining: 8.41s\n",
+            "400:\ttest: 0.8569385\tbest: 0.8569385 (400)\ttotal: 4.83s\tremaining: 7.21s\n",
+            "500:\ttest: 0.8576410\tbest: 0.8576410 (500)\ttotal: 5.7s\tremaining: 5.67s\n",
+            "600:\ttest: 0.8585538\tbest: 0.8585538 (600)\ttotal: 6.48s\tremaining: 4.3s\n",
+            "700:\ttest: 0.8590923\tbest: 0.8591487 (694)\ttotal: 7.25s\tremaining: 3.09s\n",
+            "800:\ttest: 0.8593590\tbest: 0.8595564 (749)\ttotal: 8.01s\tremaining: 1.99s\n",
+            "900:\ttest: 0.8593282\tbest: 0.8595564 (749)\ttotal: 8.8s\tremaining: 967ms\n",
+            "999:\ttest: 0.8593897\tbest: 0.8595974 (986)\ttotal: 9.58s\tremaining: 0us\n",
+            "\n",
+            "bestTest = 0.8595974359\n",
+            "bestIteration = 986\n",
+            "\n",
+            "Metric AUC is not calculated on train by default. To calculate this metric on train, add hints=skip_train~false to metric parameters.\n",
+            "0:\ttest: 0.7811641\tbest: 0.7811641 (0)\ttotal: 8.48ms\tremaining: 8.48s\n",
+            "100:\ttest: 0.8601513\tbest: 0.8604077 (89)\ttotal: 791ms\tremaining: 7.04s\n",
+            "200:\ttest: 0.8557769\tbest: 0.8609103 (111)\ttotal: 1.57s\tremaining: 6.26s\n",
+            "300:\ttest: 0.8521564\tbest: 0.8609103 (111)\ttotal: 2.38s\tremaining: 5.54s\n",
+            "400:\ttest: 0.8456949\tbest: 0.8609103 (111)\ttotal: 3.2s\tremaining: 4.78s\n",
+            "500:\ttest: 0.8432923\tbest: 0.8609103 (111)\ttotal: 4.01s\tremaining: 4s\n",
+            "600:\ttest: 0.8407359\tbest: 0.8609103 (111)\ttotal: 4.8s\tremaining: 3.19s\n",
+            "700:\ttest: 0.8388282\tbest: 0.8609103 (111)\ttotal: 5.68s\tremaining: 2.42s\n",
+            "800:\ttest: 0.8358282\tbest: 0.8609103 (111)\ttotal: 6.94s\tremaining: 1.72s\n",
+            "900:\ttest: 0.8356949\tbest: 0.8609103 (111)\ttotal: 8.18s\tremaining: 899ms\n",
+            "999:\ttest: 0.8335590\tbest: 0.8609103 (111)\ttotal: 9.04s\tremaining: 0us\n",
+            "\n",
+            "bestTest = 0.8609102564\n",
+            "bestIteration = 111\n",
+            "\n",
+            "Metric AUC is not calculated on train by default. To calculate this metric on train, add hints=skip_train~false to metric parameters.\n",
+            "0:\ttest: 0.8068872\tbest: 0.8068872 (0)\ttotal: 10.1ms\tremaining: 10.1s\n",
+            "100:\ttest: 0.8455590\tbest: 0.8455590 (100)\ttotal: 870ms\tremaining: 7.75s\n",
+            "200:\ttest: 0.8530923\tbest: 0.8530923 (200)\ttotal: 1.73s\tremaining: 6.87s\n",
+            "300:\ttest: 0.8563026\tbest: 0.8563410 (292)\ttotal: 2.62s\tremaining: 6.08s\n",
+            "400:\ttest: 0.8578000\tbest: 0.8578385 (398)\ttotal: 3.5s\tremaining: 5.23s\n",
+            "500:\ttest: 0.8583872\tbest: 0.8584821 (476)\ttotal: 4.37s\tremaining: 4.35s\n",
+            "600:\ttest: 0.8588821\tbest: 0.8589487 (593)\ttotal: 5.21s\tremaining: 3.46s\n",
+            "700:\ttest: 0.8587308\tbest: 0.8590282 (605)\ttotal: 6.06s\tremaining: 2.59s\n",
+            "800:\ttest: 0.8584744\tbest: 0.8590282 (605)\ttotal: 6.94s\tremaining: 1.72s\n",
+            "900:\ttest: 0.8583590\tbest: 0.8590282 (605)\ttotal: 7.81s\tremaining: 858ms\n",
+            "999:\ttest: 0.8581103\tbest: 0.8590282 (605)\ttotal: 8.69s\tremaining: 0us\n",
+            "\n",
+            "bestTest = 0.8590282051\n",
+            "bestIteration = 605\n",
+            "\n",
+            "Metric AUC is not calculated on train by default. To calculate this metric on train, add hints=skip_train~false to metric parameters.\n",
+            "0:\ttest: 0.8068872\tbest: 0.8068872 (0)\ttotal: 9.34ms\tremaining: 9.33s\n",
+            "100:\ttest: 0.8554795\tbest: 0.8574051 (69)\ttotal: 1.04s\tremaining: 9.23s\n",
+            "200:\ttest: 0.8486359\tbest: 0.8574051 (69)\ttotal: 2.49s\tremaining: 9.89s\n",
+            "300:\ttest: 0.8455051\tbest: 0.8574051 (69)\ttotal: 3.79s\tremaining: 8.81s\n",
+            "400:\ttest: 0.8399846\tbest: 0.8574051 (69)\ttotal: 4.69s\tremaining: 7.01s\n",
+            "500:\ttest: 0.8388077\tbest: 0.8574051 (69)\ttotal: 5.6s\tremaining: 5.58s\n",
+            "600:\ttest: 0.8364026\tbest: 0.8574051 (69)\ttotal: 6.53s\tremaining: 4.34s\n",
+            "700:\ttest: 0.8340974\tbest: 0.8574051 (69)\ttotal: 7.45s\tremaining: 3.18s\n",
+            "800:\ttest: 0.8320769\tbest: 0.8574051 (69)\ttotal: 8.38s\tremaining: 2.08s\n",
+            "900:\ttest: 0.8298923\tbest: 0.8574051 (69)\ttotal: 9.3s\tremaining: 1.02s\n",
+            "999:\ttest: 0.8302846\tbest: 0.8574051 (69)\ttotal: 10.2s\tremaining: 0us\n",
+            "\n",
+            "bestTest = 0.8574051282\n",
+            "bestIteration = 69\n",
+            "\n",
+            "Metric AUC is not calculated on train by default. To calculate this metric on train, add hints=skip_train~false to metric parameters.\n",
+            "Training on fold [0/3]\n",
+            "0:\ttest: 0.8023131\tbest: 0.8023131 (0)\ttotal: 7.58ms\tremaining: 7.57s\n",
+            "100:\ttest: 0.8696792\tbest: 0.8705039 (90)\ttotal: 706ms\tremaining: 6.28s\n",
+            "200:\ttest: 0.8691616\tbest: 0.8705039 (90)\ttotal: 1.45s\tremaining: 5.77s\n",
+            "300:\ttest: 0.8649927\tbest: 0.8705039 (90)\ttotal: 2.2s\tremaining: 5.12s\n",
+            "400:\ttest: 0.8618130\tbest: 0.8705039 (90)\ttotal: 2.94s\tremaining: 4.4s\n",
+            "500:\ttest: 0.8585372\tbest: 0.8705039 (90)\ttotal: 4.01s\tremaining: 4s\n",
+            "600:\ttest: 0.8560785\tbest: 0.8705039 (90)\ttotal: 5.23s\tremaining: 3.47s\n",
+            "700:\ttest: 0.8535254\tbest: 0.8705039 (90)\ttotal: 6.34s\tremaining: 2.7s\n",
+            "800:\ttest: 0.8519736\tbest: 0.8705039 (90)\ttotal: 7.07s\tremaining: 1.75s\n",
+            "900:\ttest: 0.8499848\tbest: 0.8705039 (90)\ttotal: 7.8s\tremaining: 857ms\n",
+            "999:\ttest: 0.8481197\tbest: 0.8705039 (90)\ttotal: 8.55s\tremaining: 0us\n",
+            "\n",
+            "bestTest = 0.8705039396\n",
+            "bestIteration = 90\n",
+            "\n",
+            "Training on fold [1/3]\n",
+            "0:\ttest: 0.7921723\tbest: 0.7921723 (0)\ttotal: 8.11ms\tremaining: 8.1s\n",
+            "100:\ttest: 0.8705982\tbest: 0.8712713 (94)\ttotal: 720ms\tremaining: 6.41s\n",
+            "200:\ttest: 0.8665098\tbest: 0.8712713 (94)\ttotal: 1.47s\tremaining: 5.85s\n",
+            "300:\ttest: 0.8628075\tbest: 0.8712713 (94)\ttotal: 2.24s\tremaining: 5.21s\n",
+            "400:\ttest: 0.8613719\tbest: 0.8712713 (94)\ttotal: 3.01s\tremaining: 4.5s\n",
+            "500:\ttest: 0.8585821\tbest: 0.8712713 (94)\ttotal: 3.75s\tremaining: 3.73s\n",
+            "600:\ttest: 0.8552467\tbest: 0.8712713 (94)\ttotal: 4.49s\tremaining: 2.98s\n",
+            "700:\ttest: 0.8529644\tbest: 0.8712713 (94)\ttotal: 5.26s\tremaining: 2.25s\n",
+            "800:\ttest: 0.8514316\tbest: 0.8712713 (94)\ttotal: 6.01s\tremaining: 1.49s\n",
+            "900:\ttest: 0.8502718\tbest: 0.8712713 (94)\ttotal: 6.75s\tremaining: 741ms\n",
+            "999:\ttest: 0.8486688\tbest: 0.8712713 (94)\ttotal: 7.5s\tremaining: 0us\n",
+            "\n",
+            "bestTest = 0.8712713255\n",
+            "bestIteration = 94\n",
+            "\n",
+            "Training on fold [2/3]\n",
+            "0:\ttest: 0.7876129\tbest: 0.7876129 (0)\ttotal: 8.01ms\tremaining: 8s\n",
+            "100:\ttest: 0.8656068\tbest: 0.8656805 (98)\ttotal: 1.17s\tremaining: 10.4s\n",
+            "200:\ttest: 0.8618255\tbest: 0.8657300 (108)\ttotal: 2.34s\tremaining: 9.29s\n",
+            "300:\ttest: 0.8583852\tbest: 0.8657300 (108)\ttotal: 3.3s\tremaining: 7.66s\n",
+            "400:\ttest: 0.8567639\tbest: 0.8657300 (108)\ttotal: 4.04s\tremaining: 6.04s\n",
+            "500:\ttest: 0.8542379\tbest: 0.8657300 (108)\ttotal: 4.8s\tremaining: 4.78s\n",
+            "600:\ttest: 0.8524682\tbest: 0.8657300 (108)\ttotal: 5.53s\tremaining: 3.67s\n",
+            "700:\ttest: 0.8516927\tbest: 0.8657300 (108)\ttotal: 6.29s\tremaining: 2.68s\n",
+            "800:\ttest: 0.8481899\tbest: 0.8657300 (108)\ttotal: 7.04s\tremaining: 1.75s\n",
+            "900:\ttest: 0.8458981\tbest: 0.8657300 (108)\ttotal: 7.78s\tremaining: 854ms\n",
+            "999:\ttest: 0.8452310\tbest: 0.8657300 (108)\ttotal: 8.52s\tremaining: 0us\n",
+            "\n",
+            "bestTest = 0.8657299818\n",
+            "bestIteration = 108\n",
+            "\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "result['params']"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "FSiQrEkcqqxI",
+        "outputId": "28007c06-0a2d-4ea2-dc42-bcaee1ff236c"
+      },
+      "execution_count": 76,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "{'depth': 5, 'learning_rate': 0.1}"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 76
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "pd.DataFrame(result['cv_results'])['test-AUC-mean'].max()\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "GTIgNA77rBFJ",
+        "outputId": "e593f648-5b54-4a54-b415-717e72d75068"
+      },
+      "execution_count": 77,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0.8689660773549619"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 77
+        }
+      ]
+    },
+    {
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "0ULnDTfYhN4z"
+        "id": "lBa0I-svrimt"
+      },
+      "execution_count": 80,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "MptFhtKsrjfa"
       },
       "execution_count": null,
       "outputs": []
