--- a/Тестовое CG/Bank-62-68/bank_ds_trainee_test_case_1_3.ipynb
+++ b/Тестовое CG/Bank-62-68/bank_ds_trainee_test_case_1_3.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyNCs1G1S3eDL56iydOqB7C0",
+      "authorship_tag": "ABX9TyPOk/AQfS6Kr0rKDIkEXYCT",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -25900,7 +25900,7 @@
         },
         "outputId": "47edbbd7-11ab-471e-cf0a-a01825039b88"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -25952,9 +25952,53 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "import nbformat\n",
+        "\n",
+        "filename = 'bank-ds-trainee-test-case-1-3.ipynb'\n",
+        "\n",
+        "# Загрузить notebook\n",
+        "with open(filename, 'r', encoding='utf-8') as f:\n",
+        "    nb = nbformat.read(f, as_version=5)\n",
+        "\n",
+        "# Удалить metadata.widgets\n",
+        "if 'widgets' in nb['metadata']:\n",
+        "    del nb['metadata']['widgets']\n",
+        "\n",
+        "# Сохранить обратно\n",
+        "with open(filename, 'w', encoding='utf-8') as f:\n",
+        "    nbformat.write(nb, f)\n",
+        "\n",
+        "print(\"metadata.widgets успешно удалены.\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 219
+        },
+        "id": "WL0iO8uluXsL",
+        "outputId": "44ae753c-5983-4c19-8e17-266408cf398e"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "FileNotFoundError",
+          "evalue": "[Errno 2] No such file or directory: 'bank-ds-trainee-test-case-1-3.ipynb'",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-3-3931475803>\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;31m# Загрузить notebook\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 6\u001b[0;31m \u001b[0;32mwith\u001b[0m \u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfilename\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'r'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mencoding\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'utf-8'\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mf\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      7\u001b[0m     \u001b[0mnb\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnbformat\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mread\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mf\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mas_version\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m5\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: 'bank-ds-trainee-test-case-1-3.ipynb'"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "WL0iO8uluXsL"
+        "id": "1QxEb9FXusbp"
       },
       "execution_count": null,
       "outputs": []
